Fix bug. When sending "CMD: close program" the goodbye message did not send. add Sleep of 1 seconds for waiting to the send before closing solved the issue.